<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Liszt</string>
    <string name="title_activity_test">Liszt Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ui_frequency">Frequency</string>
    <string name="ui_duration">Duration</string>
    <string name="ui_sine">Sine</string>
    <string name="ui_square">Square</string>
    <string name="ui_triangle">Triangle</string>

</resources>